--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sitemap-generator-node",
+  "name": "site-scraper-node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
