--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "site-scraper-node",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "cd node_modules/jsdom && npm run prepare"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "axios": "^0.26.1",
     "bluebird": "^3.7.2",
     "canvas": "^2.9.1",
-    "jsdom": "^19.0.0"
+    "jsdom": "haydencarlson/jsdom",
+    "webidl2js": "^17.0.0"
   }
 }
